--- a/index.html
+++ b/index.html
@@ -97,31 +97,31 @@
       <div class="grid">
         <div class="card">
           <h2>Part 1: Fundamentals</h2>
-          <a href="cssexample1.html">View Example</a>
+          <a href="cssexample1.html" target="_blank">View Example</a>
         </div>
         <div class="card">
           <h2>Part 2: Box Model + Positioning</h2>
-          <a href="cssexample2.html">View Example</a>
+          <a href="cssexample2.html" target="_blank">View Example</a>
         </div>
         <div class="card">
           <h2>Part 3: Selectors, States, Logic</h2>
-          <a href="cssexample3.html">View Example</a>
+          <a href="cssexample3.html" target="_blank">View Example</a>
         </div>
         <div class="card">
           <h2>Part 4: Animations & Dark Mode</h2>
-          <a href="cssexample4.html">View Example</a>
+          <a href="cssexample4.html" target="_blank">View Example</a>
         </div>
         <div class="card">
           <h2>Part 5: Grid & Shapes</h2>
-          <a href="cssexample5.html">View Example</a>
+          <a href="cssexample5.html" target="_blank">View Example</a>
         </div>
         <div class="card">
           <h2>Part 6: Modern Features</h2>
-          <a href="cssexample6.html">View Example</a>
+          <a href="cssexample6.html" target="_blank">View Example</a>
         </div>
         <div class="card">
           <h2>Part 7: Finale — Power Moves</h2>
-          <a href="cssexample7.html">View Example</a>
+          <a href="cssexample7.html" target="_blank">View Example</a>
         </div>
       </div>
     </main>
