--- a/index.html
+++ b/index.html
@@ -18,6 +18,33 @@
         color: #111827;
       }
 
+      nav {
+        background: #1e3a8a;
+        padding: 1rem 2rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      }
+
+      nav .brand {
+        font-size: 1.25rem;
+        font-weight: 800;
+        color: #ffffff;
+      }
+
+      nav .nav-links a {
+        color: white;
+        margin-left: 1rem;
+        text-decoration: none;
+        font-weight: 600;
+        transition: opacity 0.2s;
+      }
+
+      nav .nav-links a:hover {
+        opacity: 0.8;
+      }
+
       header {
         background: linear-gradient(90deg, #0f172a, #1e3a8a);
         color: white;
@@ -86,6 +113,16 @@
     </style>
   </head>
   <body>
+    <nav>
+      <div class="brand">GlobalStyle™</div>
+      <div class="nav-links">
+        <a href="index.html">🏠 Home</a>
+        <a href="https://github.com/your-username/your-repo" target="_blank"
+          >🔗 GitHub</a
+        >
+      </div>
+    </nav>
+
     <header>
       <h1>GlobalStyle™ CSS Cheatsheet Showcase</h1>
       <p>
@@ -97,31 +134,31 @@
       <div class="grid">
         <div class="card">
           <h2>Part 1: Fundamentals</h2>
-          <a href="cssexample1.html" target="_blank">View Example</a>
+          <a href="cssexample1.html">View Example</a>
         </div>
         <div class="card">
           <h2>Part 2: Box Model + Positioning</h2>
-          <a href="cssexample2.html" target="_blank">View Example</a>
+          <a href="cssexample2.html">View Example</a>
         </div>
         <div class="card">
           <h2>Part 3: Selectors, States, Logic</h2>
-          <a href="cssexample3.html" target="_blank">View Example</a>
+          <a href="cssexample3.html">View Example</a>
         </div>
         <div class="card">
           <h2>Part 4: Animations & Dark Mode</h2>
-          <a href="cssexample4.html" target="_blank">View Example</a>
+          <a href="cssexample4.html">View Example</a>
         </div>
         <div class="card">
           <h2>Part 5: Grid & Shapes</h2>
-          <a href="cssexample5.html" target="_blank">View Example</a>
+          <a href="cssexample5.html">View Example</a>
         </div>
         <div class="card">
           <h2>Part 6: Modern Features</h2>
-          <a href="cssexample6.html" target="_blank">View Example</a>
+          <a href="cssexample6.html">View Example</a>
         </div>
         <div class="card">
           <h2>Part 7: Finale — Power Moves</h2>
-          <a href="cssexample7.html" target="_blank">View Example</a>
+          <a href="cssexample7.html">View Example</a>
         </div>
       </div>
     </main>
