--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
       <div class="brand">GlobalStyle™</div>
       <div class="nav-links">
         <a href="index.html">🏠 Home</a>
-        <a href="https://github.com/your-username/your-repo" target="_blank"
+        <a
+          href="https://github.com/Mohammed-Zakwan-07/GlobalStyles"
+          target="_blank"
           >🔗 GitHub</a
         >
       </div>
