--- a/cssexample4.html
+++ b/cssexample4.html
@@ -26,6 +26,34 @@
         padding: 2rem;
       }
 
+      nav {
+        background: #1e3a8a;
+        padding: 1rem 2rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        margin-bottom: 2rem;
+      }
+
+      nav .brand {
+        font-size: 1.25rem;
+        font-weight: 800;
+        color: #ffffff;
+      }
+
+      nav .nav-links a {
+        color: white;
+        margin-left: 1rem;
+        text-decoration: none;
+        font-weight: 600;
+        transition: opacity 0.2s;
+      }
+
+      nav .nav-links a:hover {
+        opacity: 0.8;
+      }
+
       h1 {
         color: var(--accent);
         text-align: center;
@@ -166,6 +194,17 @@
         white-space: nowrap;
       }
     </style>
+    <nav>
+      <div class="brand">GlobalStyle™</div>
+      <div class="nav-links">
+        <a href="index.html">🏠 Home</a>
+        <a
+          href="https://github.com/Mohammed-Zakwan-07/GlobalStyles"
+          target="_blank"
+          >🔗 GitHub</a
+        >
+      </div>
+    </nav>
     <script>
       function toggleDarkMode() {
         document.body.classList.toggle("dark-mode");
